change locator to make it locale independent